NetBSD Problem Report #39719

From www@NetBSD.org  Wed Oct  8 14:52:23 2008
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by narn.NetBSD.org (Postfix) with ESMTP id 2BDC963BA54
	for <gnats-bugs@gnats.netbsd.org>; Wed,  8 Oct 2008 14:52:23 +0000 (UTC)
Message-Id: <20081008145222.EC6BA63B88A@narn.NetBSD.org>
Date: Wed,  8 Oct 2008 14:52:22 +0000 (UTC)
From: ef@math.uni-bonn.de
Reply-To: ef@math.uni-bonn.de
To: gnats-bugs@NetBSD.org
Subject: block/inode typo in quotacheck(8)
X-Send-Pr-Version: www-1.0

>Number:         39719
>Category:       bin
>Synopsis:       block/inode typo in quotacheck(8)
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Oct 08 14:55:00 +0000 2008
>Closed-Date:    Mon Dec 14 02:05:40 +0000 2009
>Last-Modified:  Mon Dec 14 02:05:40 +0000 2009
>Originator:     Edgar Fuß
>Release:        4.0
>Organization:
Mathematisches Institut der Universität Bonn
>Environment:
>Description:
There is an obvious typo in quotacheck(8).
In update(), line 558 reads (indentation removed):

/*
 * Reset time limit if have a soft limit and were
 * previously under it, but are now over it.
 */
if (dqbuf.dqb_bsoftlimit &&
    dqbuf.dqb_curblocks < dqbuf.dqb_bsoftlimit &&
    fup->fu_curblocks >= dqbuf.dqb_bsoftlimit)
        dqbuf.dqb_btime = 0;
if (dqbuf.dqb_isoftlimit &&
    dqbuf.dqb_curblocks < dqbuf.dqb_isoftlimit &&
                 ^^^^^^
    fup->fu_curblocks >= dqbuf.dqb_isoftlimit)
               ^^^^^^
        dqbuf.dqb_itime = 0;
dqbuf.dqb_curinodes = fup->fu_curinodes;
dqbuf.dqb_curblocks = fup->fu_curblocks;

where the marked "blocks" should clearly be "inodes".
It would also seem more logically to me to reverse the order of the last two
assignments to keep the blocks/inodes order consistent.


>How-To-Repeat:
less /usr/src/usr.sbin/quotacheck/quotacheck.c

>Fix:
567,568s/curblocks/curinodes/

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/39719 CVS commit: src/usr.sbin/quotacheck
Date: Thu,  9 Oct 2008 14:56:35 +0000 (UTC)

 Module Name:	src
 Committed By:	christos
 Date:		Thu Oct  9 14:56:35 UTC 2008

 Modified Files:
 	src/usr.sbin/quotacheck: quotacheck.c

 Log Message:
 PR/39719: Edgar Fu: block/inode typo in quotacheck(8)


 To generate a diff of this commit:
 cvs rdiff -r1.39 -r1.40 src/usr.sbin/quotacheck/quotacheck.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Mon, 14 Dec 2009 02:05:40 +0000
State-Changed-Why:
christos fixed this over a year ago.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.