PR/39719: Edgar Fu: block/inode typo in quotacheck(8)